--- a/service.yml
+++ b/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: myapp-service
 spec:
-  type: NodePort
+  type: NodePort #type of service 
   ports:
     - port: 80
       targetPort: 80
