--- a/pod.yml
+++ b/pod.yml
@@ -30,6 +30,7 @@ spec:
         capabilities:
           add: ["MAC_ADMIN"]
             
+  serviceAccountName: dashboard-sa
   volumes:
     - name: app-secret-volume
       secret:
