--- a/serviceAccount.yml
+++ b/serviceAccount.yml
@@ -24,3 +24,4 @@ metadata:
 # Before v 1.22 serviceAccount are created with non-expiry Token
 # after v 1.24 serviceAcount are now created and to create a token anothewr 
 # command has to be run 
+# kubectl create token dashboard-sa
