--- a/pod.yml
+++ b/pod.yml
@@ -29,13 +29,19 @@ spec:
         runAsUser: 1000
         capabilities:
           add: ["MAC_ADMIN"]
+  tolerations:
+    - key: "app"
+      operator: "Equal"
+      value: "blue"
+      effect: "NoSchedule"
             
   serviceAccountName: dashboard-sa
   volumes:
     - name: app-secret-volume
       secret:
         secretName: app-secret
-      
+  nodeSelector:
+    size: Large
 
 
 # Entrypoint corresponds to command field
@@ -45,3 +51,6 @@ spec:
 # env inject specified key value from config map
 # envFrom inject whole config map
 # volumes 
+# Nodeselectors are used to place pods on a particular node
+# scheduler match key value pais in nodeSelector property in pod definition file 
+# with the labels defined in the node 
