Uprading K8s to newer Version

--- a/clusterMaintainance/os.yml
+++ b/clusterMaintainance/os.yml
@@ -18,3 +18,64 @@
 # First upgrade kubeadm itself => $ apt-get upgrade -y kubeadm=<v>
 # $ kubeadm upgrade  apply <v> //update control plane 
 # $ apt-get upgrade kubelet<v> //update kubelet on master
+
+
+
+
+# Upgradation 
+# update package repo on all nodes
+
+# echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /" | sudo tee /etc/apt/sources.list.d/kubernetes.list 
+# curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+# sudo apt update 
+
+# determining version to upgrade 
+# apt-cache madison kubeadm
+
+
+# upgrade Master node 
+
+
+
+# Update kubeadm tool first
+# sudo apt-mark unhold kubeadm && \
+# sudo apt-get update && sudo apt-get install -y kubeadm='1.29.0' && \
+# sudo apt-mark hold kubeadm
+
+# kubeadm upgrade plan
+
+# kubelet has to be upraded manually
+
+# kubeadm upgrade apply v1.30.x
+
+# drain the node ignoring daemonsets
+
+# sudo apt-mark unhold kubelet kubectl && \
+# sudo apt-get update && sudo apt-get install -y kubelet='1.30.x-*' kubectl='1.30.x-*' && \
+# sudo apt-mark hold kubelet kubectl
+
+# sudo systemctl daemon-reload
+# sudo systemctl restart kubelet
+
+# uncordon the controlplane node
+
+# update worker nodes
+# change package repo same as master node
+
+
+# sudo apt-mark unhold kubeadm && \
+# sudo apt-get update && sudo apt-get install -y kubeadm='1.30.x-*' && \
+# sudo apt-mark hold kubeadm
+
+# kubeadm upgrade node
+
+
+# Drain the node
+# sudo apt-mark unhold kubelet kubectl && \
+# sudo apt-get update && sudo apt-get install -y kubelet='1.30.x-*' kubectl='1.30.x-*' && \
+# sudo apt-mark hold kubelet kubectl
+
+# sudo systemctl daemon-reload
+# sudo systemctl restart kubelet
+
+# uncordon the node 
