--- a/clusterMaintainance/os.yml
+++ b/clusterMaintainance/os.yml
@@ -64,7 +64,7 @@
 
 
 # sudo apt-mark unhold kubeadm && \
-# sudo apt-get update && sudo apt-get install -y kubeadm='1.30.x-*' && \
+# sudo apt-get update && sudo apt-get install -y kubeadm='1.29.0' && \
 # sudo apt-mark hold kubeadm
 
 # kubeadm upgrade node
